--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,7 @@
+<% provide(:title, 'Home') %>
 <h1>Sample App</h1>
 <p>
-	This is the home pade for the
-	<a href="http://railstutorial.org">Ruby on Rails Tutorial</a>
-	sample application.
-Find me in app/views/static_pages/home.html.erb</p>
+  This is the home pade for the
+  <a href="http://railstutorial.org">Ruby on Rails Tutorial</a>
+  sample application.
+</p>
